# HeThongDatVe

./: README.md
backend/: pyproject.toml  requirements.txt  test.ipynb
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/email-templates/: booking_confirmation.html
backend/app/models/: __init__.py  booking.py  bus.py  payment.py  route.py  user.py
backend/app/routers/: admin.py  auth.py  bookings.py  buses.py  payments.py  routes.py  users.py
backend/app/schemas/: __init__.py  booking.py  bus.py  payment.py  route.py  user.py
backend/app/services/: email.py  mock_payment_gateway.py  payment_gateway.py
backend/app/utils/: security.py
backend/scripts/: create_admin.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: AdminLayout.jsx  Header.js  Layout.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: BookingConfirmation.css  BookingConfirmation.js  BookingForm.js  BusDetail.js  BusList.js  Home.js  Login.js  MyBookings.css  MyBookings.js  Profile.js  Register.js
frontend/src/pages/admin/: Bookings.jsx  Buses.jsx  Dashboard.jsx  Routes.jsx  Statistics.jsx
frontend/src/services/: api.js
